# ESP32-ESP-IDF-SPIFFS-Web-Server

./: sdkconfig  sdkconfig.old
INC/: connect_wifi.h  esp_https_server.h  http_request.h  station_info.h
SRC/: connect_wifi.c  esp_https_server.c  http_request.c  station_info.c
certs/: prvtkey.crt  servercert.crt
certs/new/: cacert.pem  prvtkey.pem
data/: hwConf.html  index.html  mainPage.html  modelConf.html  sinapsiInfo.html  specFunc.html  style.css  upload.html
main/: CMakeLists.txt  Kconfig.projbuild  main.c
